Remove s in polygons, use toList directly